7번 문항 할차례

--- a/8주차.md
+++ b/8주차.md
@@ -296,6 +296,8 @@ public abstract class Television implements RemoteControl {
 
 ### 5. 인터페이스의 기본메소드(Default Method), 자바 8
 
+
+
 인터페이스에서 디폴트 메소드를 허용한 이유는 기존 인터페이스를 확장해서 새로운 기능을 추가하기 위해서이다.
 
 기존 인터페이스의 이름과 추상 메소드의 변경 없이 디폴트 메소드만 추가할 수 있기 때문에 이전에 개발한 구현 클래스를 그대로 사용할 수 있으면서 새롭게 개발하는 클래스는 디폴트 메소드를 활용할 수 있다.
@@ -357,6 +359,64 @@ public interface MyInterface {
 
 
 
+Java version 8에서 static 메소드가 사용가능하다
+
+```
+public interface Calculator { 
+
+	public int plus(int pre, int post); 
+
+	static int execMulti(int pre, int post){ 
+		return pre * post; 
+	} 
+	
+}
+
+```
+
+```
+public class CalculatorImpl implements Calculator { 
+
+	@Override
+	public int plus(int pre, int post) { 
+		return pre + post; 
+	} 
+}
+
+```
+
+```
+public class InterfaceEx { 
+
+	public static void main(String[] args) { 
+	
+	Calculator cal = new CalculatorImpl(); 
+	int resultPlus = cal.plus(3, 9); 
+	System.out.println("resultPlus 값은 : " + resultPlus); //12
+	
+	//int resultExecMulti = cal.execMulti(3,9); (x)
+	//static 메소드는 클래스명.static메소드();로만 호출가능
+	int resultExecMulti = Calculator.execMulti(3, 9); 
+	System.out.println("static method 호출 결과 : " + resultExecMulti); //27
+	} 
+}
+
+```
+
+
+
+- interface의 **static** 메소드 
+
+\- interface에서 메소드 구현이 가능하다.
+
+\- 반드시 클래스 명으로 메소드를 호출해야 한다.
+
+\- 재정의가 불가능하다.
+
+
+
+
+
 ### 7. 인터페이스의 private 메소드, 자바 9
 
 
@@ -368,3 +428,5 @@ public interface MyInterface {
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 이것이 자바다
+
+출처: https://dahyeee.tistory.com/entry/JAVA-interface-default-static메소드 []
