--- a/8주차.md
+++ b/8주차.md
@@ -419,6 +419,40 @@ public class InterfaceEx {
 
 ### 7. 인터페이스의 private 메소드, 자바 9
 
+Java 9부터는 인터페이스에 **private 메서드** 와 **private static 메서드** 를 추가 할 수 있다.
+
+이러한 개인 메서드는 인터페이스 내부의 코드 재사용 성을 향상시킨다.
+
+예를 들어, 두 개의 기본 메서드가 코드를 공유해야하는 경우 개인 인터페이스 메서드를 사용하면 그렇게 할 수 있지만 해당 개인 메서드를 노출하지 않고 클래스를 구현한다.
+
+private 메소드는 다음과 같은 특성을 가지고 있다.
+
+* 메소드 body가 있고 abstract이 아니다.
+* static 이거나 non-static 일 수 있다.
+* 구현 클래스와 인터페이스가 상속되지 않는다.
+* 인터페이스에서 다른 메소들르 호출할 수 있다.
+
+private는 private, abstract, default 또는 static 메소드를 호출 할 수 있다.
+
+private static은 static 및 static private 메소드만 호출 할 수 있다.
+
+```
+public interface MyInterface{
+
+	private static int staticMethod(){
+		return 10;
+	}
+	
+	private int nonStaticMethod(){
+		retrun 0;
+	}
+}
+```
+
+
+
+
+
 
 
 
@@ -430,3 +464,5 @@ public class InterfaceEx {
 이것이 자바다
 
 출처: https://dahyeee.tistory.com/entry/JAVA-interface-default-static메소드 []
+
+출처: https://flyburi.com/605
