9주차 마무리

--- a/9주차.md
+++ b/9주차.md
@@ -156,9 +156,19 @@ try{
 
 `throw` 키워드를 이용하면 인위적으로 예외를 발생시킬 수 있다.
 
+또한  `throw` 는 메소드내에서 상위 블록으로 예외를 던지는 것이다.
 
+`throw`는 억지로 에러를 발생시킬때도 사용되지만 현재 메소드의 에러를 처리한 후에 상위 메소드에 에러 정보를 줌으로써 상위 메소드에서도 에러가 발생한 것을 감지할 수 있다.
 
-
+```
+public void Test() throws Exception {
+	// ...
+	
+	if(..){
+		throw new Exception();
+	}
+}
+```
 
 
 
@@ -223,6 +233,135 @@ public void method1() throws ClassNotFoundException {
 
 
 
+### 2. 자바가 제공하는 예외 계층 구조
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/예외5.PNG"> </img>
+
+모든 클래스는 Object의 하위 클래스이다.
+
+Throwable 클래스 : 모든 예외의 조상이 되는 Exception 클래스와 모든 오류의 조상이 되는 Error 클래스의 부모 클래스
+
+
+
+
+
+모든 예외 클래스들은 다음과 같이 java.lang.Exception 클래스를 상속받는다.
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/예외.PNG"> </img>
+
+일반 예외와 실행 예외 클래스를 구별하는 방법은 일반 예외는 Exception을 상속받지만 RuntimeExcpetion을 상속받지 않는 클래스들이고, 실행 예외는 다음과 같이 RuntimeException 역시 Exception을 상속받지만, JVM은 RuntimeException을 상속했는지 여부를 보고 실행 예외를 판단한다.
+
+
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/예외2.PNG"> </img>
+
+실행예외는 자바 컴파일러가 체크를 하지 않기 때문에 오로지 개발자의 경험에 의해서 예외 처리 코들르 삽입해야 한다. 만약 개발자가 실행 예외에 대해 예외 처리 코드를 넣지 않았을 경우, 해당 예외가 발생하면 프로그램은 곧바로 종료된다.
+
+
+
+
+
+
+
+Java에서 Exception은 checked와 unchecked 두 가지로 나눌 수 있다. 아래 도표는 Java Exception 클래스 계층 구조를 보여준다
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/예외3.PNG"> </img>
+
+
+
+#### 체크예외(checked Exception)
+
+빨간색은 체크 예외이다. 위에서 일반 예외로 설명되어있는 부분이다.
+
+체크 예외가 발생할 수 있는 메소드를 사용할 경우, 복구가 가능한 예외들이기 때문에 반드시 예외를 처리하는 코드를 작성해야 한다. 
+
+catch문으로 예외를 잡거나, throws로 예외를 자신을 호출한 클래스로 던지는 방법으로 해결해야한다.
+
+
+
+#### 언체크 예외(unchecked Exception)
+
+초록색은 언체크 예외이다. 위에서 실행 예외로 설명되어 있는 부분이다.
+
+언체크 예외라고 불리는 이유는 명시적으로 예외처리를 강제하지 않기 때문이다. 언체크 예외는 따로 catch문으로 예외를 잡거나, throws로 선언하지 않아도 된다.
+
+프로그램에 오류가 있을 때 발생하도록 의도된 것이다.
+
+
+
+
+
+### 3. Exception과 Error의 차이는?
+
+* Error : 컴파일 시 문법적인 오류와 런타임시  nullpoint 참조와 같은 오류로 프로세스에 심각한 문제를 야기 시켜 프로세스를 종료 시킬 수 있다.
+
+  - 핸들링이 불가능해 회복이 불가능하다. 대표적으로 OutOfMemory가 있다.
+
+  
+
+* Exception : 컴퓨터 시스템의 동작 도중 예기치 않았던 이상 상태가 발생하여 수행 중인 프로그램이 영향을 받는 것.
+  - 프로그램이 핸들링할 수 있는 경우를 Exception 이라고 한다.
+  - 처리가 가능하다
+  - checked exception
+  - unchecked exception
+
+
+
+### 4. RuntimeException과 RE가 아닌 것의 차이는?
+
+RuntimeException은 JVM의 정상적인 작동 중에 발생할 수 있는 예외의 슈퍼 클래스이다.
+
+RuntimeException 및 해당 서브 클래스는 unchecked exception이다. unchecked exception은 메소드 또는 생성자의 실행에 의해 발생한다.
+
+메소드 또는 생성자 경계 외부로 전파될 수 있는 경우 메소드 또는 생성자의 throws 절에서 선언될 필요가 없다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/예외4.PNG"> </img>
+
+
+
+
+
+### 5. 커스텀한 예외 만드는 방법
+
+사용자 정의 예외 클래스는 컴파일러가 체크하는 checked exception로 선언할 수도 있고, 컴파일러가 체크하지 않는 unchecked exception로 선언할 수도 있다.
+
+checked exception로 선언할 경우 Exception을 상속하면 되고 unchecked exception로 선언할 경우에는 RuntimeException을 상속하면 된다.
+
+
+
+```
+public class XXXException extends [Exception | RuntimeException] {
+	public XXXException(){}
+	public XXXException(String message) { super(message); }
+}
+```
+
+사용자 정의 예외 클래스 이름은 Exception으로 끝나는 것이 좋다.
+
+
+
+```
+public class BalanceInsufficientException extends [Exception | RuntimeException] {
+	public BalanceInsufficientException(){}
+	
+	public BalanceInsufficientException(String message) { 
+		super(message); 
+	}
+}
+```
+
+BalanceInsufficientException은 Exception을 상속하기 때문에 컴파일러에 의해 체크되는 예외가 된다. 그래서 소스 작성 시 try-catch 블록으로 예외 처리가 필요하다.
+
+
+
+
+
 
 
 
@@ -232,3 +371,9 @@ public void method1() throws ClassNotFoundException {
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 이것이 자바다
+
+https://reference-m1.tistory.com/246
+
+https://drcarter.tistory.com/153
+
+https://bigstupid.tistory.com/77
