--- a/9주차.md
+++ b/9주차.md
@@ -360,6 +360,64 @@ BalanceInsufficientException은 Exception을 상속하기 때문에 컴파일러
 
 
 
+`throw`키워드로 예외를 발생시키는 법을 위해서 설명하였다. 
+
+````
+throw new XXXException();
+throw new XXXException("메시지");
+````
+
+예외 객체를 생성할 때는 기본 생성자 또는 예외 메시지를 갖는 생성자 중 어떤 것을 사용해도 된다.
+
+만약 catch 블록에서 예외 메시지가 필요하다면 예외 메시지를 갖는 생성자를 이용해야 한다. 예외 발생 코드를 가지고 있는 메소드는 내부에서 try-catch 블록으로 예외를 처리할 수 있지만, 대부분은 자신을 호출한 곳에서 예외를 처리하도록 throws 키워드로 예외를 떠넘긴다.
+
+
+
+```
+public void method() throws XXXException {
+	throw new XXXException("메시지");
+}
+```
+
+그렇기 때문에 throws 키워드를 포함하고 있는 메소드는 호출한 곳에서 다음과 같이 예외 처리를 해주어야 한다.
+
+```
+try {
+	method();
+}catch(XXXException e) {
+	//예외 처리
+}
+```
+
+
+
+다음 예제는 은행 계좌(Account) 클래스를 작성한 것이다. 출금(withdraw) 메소드에서 잔고(balance) 필드와 출금액을 비교해서 잔고가 부족하면 BalanceInsufficientException을 발생시키도록 했다.
+
+
+
+```
+public class Account{
+	private long balance;
+	
+	public Account(){}
+	
+	public long getBalance(){
+		return balance;
+	}
+	
+	public void deposit(int money){
+		balance += money;
+	}
+	
+	public void withdraw(int money) throws BalanceInsufficientException { 
+		if(balance < money){
+			throw new BalanceInsufficientException("잔고부족:" + (money-balance) + " 모자람"); //사용자 정의 예외 발생
+		}
+		balance -= money;
+	}
+}
+```
+
 
 
 
