--- a/10주차.md
+++ b/10주차.md
@@ -69,9 +69,176 @@ class Task implements Runnable {
 
 
 
+Runnable은 작업 내용을 가지고 있는 객체이지 실제 스레드는 아니다. Runnable 구현 객체를 생성한 후, 이것을 매개값으로 해서 Thread 생성자를 호출하면 비로소 작업 스레드가 생성된다.
 
 
 
+```
+Runnable task = new Task();
+Thread thread = new Thread(task);
+```
+
+
+
+작업 스레드는 생성되는 즉시 실행되는 것이 아니라, start() 메소드를 다음과 같이 호출해야만 비로소 실행된다.
+
+```
+thread.start();
+```
+
+
+
+start() 메소드가 호출되면, 작업 스레드는 매개값으로 받은 Runnable 의 run() 메소드를 실행하면서 자신의 작업을 처리한다.
+
+
+
+ 0.5초 주기로 비프음을 발생시키면서 동시에 프린팅하는 작업이 있다고 가정해보자. 비프음 발생과 프린팅은 서로 다른 작업이므로 메인 스레드가 동시에 두 가지 작업을 처리할 수 없다.
+
+따라서 두 작업 중 하나는 메인 스레드가 아닌 다른 스레드에서 실행시켜야한다.
+
+프린팅은 메인 스레드가 담당하고 비프음을 들려주는 것은 작업 스레드가 담당하도록 해보자.
+
+
+
+```
+public class BeepTask implements Runnable {
+	public void run(){
+		Toolkit toolkit = Toolkit.getDefaultTookkit();
+		for(int i=0; i<5; i++){
+			toolkit.beep();
+			try{
+				Thread.sleep(500);
+			}catch(Exception e){
+				
+			}
+		}
+	}
+}
+```
+
+
+
+```
+public class BeepPrintExample2{
+	public static void main(String[] args){
+		Runnable beepTask = new BeepTask();
+		Thread thread = new Thread(beepTask);
+		thread.start();
+		
+		for(int i=0; i<5; i++){
+			System.out.println("띵");
+			try{ 
+				Thread.sleep(500); 
+			}catch(Exception e){
+				
+			}
+		}
+	}
+}
+```
+
+
+
+
+
+
+
+### 2. 쓰레드의 상태
+
+
+
+스레드 객체를 생성하고, start() 메소드를 호출하면 곧바로 스레드가 실행되는 것처럼 보이지만 사실은 실행 대기 상태가 된다.
+
+실행 대기 상태란 아직 스케줄링이 되지 않아서 실행을 기다리고 있는 상태를 말한다.
+
+실행 대기 상태에 있는 스레드 중에서 스레드 스케줄링으로 선택된 스레드가 비로서 CPU를 점유하고 run() 메소드를 실행한다.
+
+이때를 실행(Running) 상태라고 한다.
+
+실행 상태의 스레드는 run() 메소드를 모두 실행하기 전에 스레드 스케줄링에 의해 다시 실행 대기 상태로 돌아갈 수 있다. 그리고 실행 대기 상태에 있는 다른 스레드가 선택되어 실행 상태가 된다.
+
+실행 상태에서 run() 메소드가 종료되면, 더 이상 실행할 코드가 없기 때문에 스레드의 실행은 멈추게 된다. 이 상태를 종료 상태라고 한다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/쓰레드2.PNG"> </img>
+
+
+
+경우에 따라서 스레드는 실행 상태에서 실행 대기 상태로 가지 않을 수도 있다. 실행 상태에서 일시 정지 상태로 가기도 하는데, 일시 정지 상태는 스레드가 실행할 수 없는 상태이다.
+
+일시 정지 상태는 1. WAITING, 2. TIMED_WAITING, 3. BLOCKED가 있다. 
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/쓰레드3.PNG"> </img>
+
+
+
+| 상태     | 열거상수      | 설명                                                         |
+| -------- | ------------- | ------------------------------------------------------------ |
+| 객체생성 | NEW           | 스레드 객체가 생성, 아직 start() 메소드가 호출되지 않은 상태 |
+| 실행대기 | RUNNABLE      | 실행 상태로 언제든지 갈 수 있는 상태                         |
+| 일시정지 | WAITING       | 다른 스레드가 통지할 때까지 기다리는 상태                    |
+| 일시정지 | TIMED_WAITING | 주어진 시간 동안 기다리는 상태                               |
+| 일시정지 | BLOCKED       | 사용하고자하는 객체의 락이 풀릴 때까지 기다리는 상태         |
+| 종료     | TERMINATED    | 실행을 마친 상태                                             |
+
+
+
+
+
+### 3. 쓰레드의 우선순위
+
+
+
+멀티 스레드는 동시성 또는 병렬성으로 실행된다. 
+
+동시성은 멀티 작업을 위해 하나의 코어에서 멀티 스레드가 번갈아가며 실행하는 성질을 말한다.
+
+병렬성은 멀티 작업을 위해 멀티 코어에서 개별 스레드를 동시에 실행하는 성질을 말한다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/쓰레드4.PNG"> </img>
+
+
+
+스레드의 개수가 코어의 수보다 많을 경우, 스레드를 어떤 순서에 의해 동시성으로 실행할 것인가를 결정해야 하는데, 이것을 스레드 스케줄링이라고 한다.
+
+스레드 스케줄링에 의해 스레드들은 아주 짧은 시간에 번갈아가면서 그들의 run() 메소드를 조금씩 실행한다.
+
+
+
+자바의 스레드 스케줄링은 우선순위 방식과 순환 할당 방식을 사용한다.
+
+* 우선순위 방식
+
+우선순위가 높은 스레드가 실행 상태를 더 많이 가지도록 스케줄링하는 것을 말한다.
+
+* 순환 할당 방식
+
+순환 할당 방식은 시간 할당량(Time Slice)을 정해서 하나의 스레드를 정해진 시간만큼 실행하고 다시 다른 스레드를 실행하는 방식을 말한다.
+
+
+
+스레드 우선순위 방식은 스레드 객체에 우선 순위 번호를 부여할 수 있기 때문에 개발자가 코드로 제어할 수 있다. 하지만 순환 할당 방식은 자바 가상 기계에 의해서 정해지기 때문에 코드로 제어할 수 없다.
+
+우선순위 방식에서 우선순위는 1에서 10까지 부여되는데, 1이 가장 우선순위가 낮고, 10이 가장 높다.
+
+우선순위를 부여하지 않으면 모든 스레드들은 기본적으로 5의 우선순위를 할당받는다.
+
+만약 우선순위를 변경하고 싶다면 Thread 클래스가 제공하는 setPriority() 메소드를 이용하면 된다.
+
+
+
+```
+thread.setPriority(우선순위);
+```
+
+
+
+순위가 높은 스레드가 실행 기회를 더 많이 가지기 때문에 우선순위가 낮은 스레드보다 계산 작업을 빨리 끝낸다. 쿼드 코어일 경우에는 4개의 스레드가 병렬성으로 실행될 수 있기 때문에 4개 이하의 스레드를 실행할 경우에는 우선순위 방식이 크게 영향을 미치지 못한다. 최소한 5개 이상의 스레드가 실행되어야 우선순위의 영향을 받는다.
 
 
 
@@ -84,4 +251,10 @@ class Task implements Runnable {
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 이것이 자바다
+
+참조 : https://widevery.tistory.com/27
+
+참조 : https://sas-study.tistory.com/218
+
+
 
