--- a/10주차.md
+++ b/10주차.md
@@ -242,6 +242,199 @@ thread.setPriority(우선순위);
 
 
 
+### 4. Main 스레드
+
+
+
+메인 스레드는 main() 메소드를 실행하며 시작된다. 
+
+즉 메인 스레드는 main 메소드의 코드 흐름이다. 메인 스레드가 없다면 멀티 스레드가 나올 수 없다.
+
+
+
+```
+public static void main(String[] args){ //메인스레드 시작
+	...
+	...
+	...
+}//메인스레드 끝
+```
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/쓰레드5.PNG"> </img>
+
+
+
+
+
+### 5. 동기화
+
+
+
+자바에서 동기화란 여러 개의 스레드가 한 개의 자원을 사용하고자 할 때 해당 스레드만 제외하고 나머지는 접근을 못하도록 막는 것이다.
+
+싱글스레드 프로세스의 경우 프로세스 내에서 단 하나의 스레드만 작업하기 때문에 문제가 없지만 멀티스레드 프로세스의 경우 여러 스레드가 같은 프로세스 내의 자원을 공유해서 작업하기 때문에 서로의 작업에 영향을 주게 된다. 
+
+만일 스레드A가 작업하던 도중에 다른 스레드B에게 제어권이 넘어갔을 때 스레드A가 작업하던 공유데이터를 쓰레드B가 임의로 변경하였다면, 다시 스레드A가 제어권을 받아서 나머지 작업을 마쳤을 때 원래 의도했던 것과는 다른 결과를 얻을 수 있다.
+
+이러한 일이 발생하는 것을 방지하기 위해서 한 스레드가 특정 작업을 끝마치기 전까지 다른 스레드에 의해 방해받지 않도록 하는 것이 필요하다.
+
+그래서 도입된 개념이 바로 임계영역(critical section) 과 잠금(lock) 이다.
+
+공유 데이터를 사용하는 코드 영역을 임계 영역으로 지정해놓고, 공유 데이터가 가지고 있는 lock을 획득한 단 하나의 스레드만 이 영역 내의 코드를 수행할 수 있게 한다. 그리고 해당 스레드가 반납된 lock을 획득하여 임계영역의 코드를 수행할 수 있게 된다.
+
+이처럼 한 스레드가 진행 중인 작업을 다른 스레드가 간섭하지 못하도록 막는 것을 `스레드의 동기화` 라고 한다.
+
+
+
+* synchronized를 이용한 동기화
+
+이 키워드는 임계 영역을 설정하는데 사용된다.
+
+```
+1. 메서드 전체를 임계 영역으로 지정
+public synchronized void calcSum(){
+	// ...
+}
+
+2. 특정한 영역을 임계 영역으로 지정
+synchronized(객체의 참조변수){
+	// ...
+}
+```
+
+
+
+첫 번째 방법은 메서드 앞에 synchronized를 붙이는 것인데, synchronized를 붙이면 메서드 전체가 임계 영역으로 설정된다. 스레드는 synchronized메서드가 호출된 시점부터 해당 메서드가 포함된 객체의 lock을 얻어 작업을 수행하다가 메서드가 종료되면 lock을 반환한다.
+
+
+
+두 번째 방법은 메서드 내의 코드 일부를 블럭{} 으로 감싸고 블럭 앞에 'synchronized(참조변수)'를 붙이는 것인데, 이때 참조변수는 락을 걸고자하는 객체를 참조하는 것이어야 한다. 
+
+이블럭을 synchronized블럭이라고 부르며, 이 블럭의 영역 안으로 들어가면서 부터 스레드는 지정된 객체의 lock을 얻게 되고, 이 블럭을 벗어나면 lock을 반납한다.
+
+
+
+첫 번째와 두 번째 방법 모두 lock의 획득과 반납이 모두 자동적으로 이루어진다.
+
+
+
+임계 영역은 멀티스레드 프로그램의 성능을 좌우하기 때문에 가능하면 메서드 전체에 락을 거는 것보다 synchronized블럭으로 임계 영역을 최소화해서 보다 효율적인 프로그램이 되도록 노력해야 한다. 
+
+
+
+```
+class ThreadEx21 {
+	public static void main(String[] arges){
+		Runnable r = new RunnableEx21();
+		new Thread(r).start();
+		new Thread(r).start();
+	}
+}
+
+class Account{
+	private int balance = 1000;
+	
+	public int getBalace(){
+		return balance;
+	}
+	
+	public void withdraw(int money){
+		if(balance >= money){
+			try{ Thread.sleep(1000);} catch(InterruptedException e){}
+			balance -= money;
+		}
+	}//withdraw
+}
+
+class RunnableEx21 implements Runnable{
+	Account acc = new Account();
+	
+	public void run(){
+		while(acc.getBalance() > 0){
+			//100, 200, 300 중 한 값을 임으로 선택해서 출금
+			int money = (int)(Math.random() * 3 + 1) * 100;
+			acc.withdraw(money);
+			System.out.println("balance : " + acc.getBalance());
+		}
+	}//run()
+}
+```
+
+
+
+은행계좌(account)에서 잔고(balance)를 확인하고 임의의 금액을 출금(withdraw)하는 예제이다.
+
+아래의 코드를 보면 잔고가 출금하려는 금액보다 큰 경우에만 출금하도록 되어 있는 것을 확인 할 수 있다.
+
+
+
+```
+	public void withdraw(int money){
+		if(balance >= money){
+			try{ Thread.sleep(1000);} catch(InterruptedException e){}
+			balance -= money;
+		}
+	}//withdraw
+```
+
+
+
+그러나 실행결과를 보면 잔고가 음수인 것을 볼 수 있다.
+
+그 이유는 한 스레드가 if문의 조건식을 통과하고 출금하기 바로 직전에 다른 스레드가 끼어들어서 출금을 먼저 했기 때문이다.
+
+
+
+예를 들어 한 스레드가 if문의 조건식을 계산했을 때는 잔고가 200이고 출금하려는 금액이 100이라서 조건식이 true가 되어 출금을 수행 하려는 순간 다른 스레드에게 제어권이 넘어가서 다른 스레드가 200을 출금하여 잔고가 0이 되었다. 다시 이전 스레드로 제어권이 넘어오면 if문 다음부터 수행하게 되므로 잔고가 0인 상태에서 100을 출금하여 잔고가 결국 -100이 된다. 그래서 잔고를 확인하는 if문과 출금하는 문장은 하나의 임계 영역으로 묶여져야 한다.
+
+
+
+
+
+```
+public synchronized void withdraw(int money){
+	if(balance >= money){
+		try{ Thread.sleep(1000);} catch(InterruptedException e){}
+		balance -= money;
+	}
+}
+```
+
+
+
+위와 같이 withdraw 메서드에 synchronized 키워드를 붙이기만 하면 간단히 동기화가 된다.
+
+
+
+synchronized로 동기화해서 공유 데이터를 보호하는 것 까지는 좋은데, 특정 스레드가 객체의 락을 가진 상태로 오랜 시간을 보내지 않도록 하는 것도 중요하다.
+
+이러한 상황을 개선하기 위해 고안된 것이 바로 wait()과 notify()이다. 동기화된 임계 영역의 코드를 수행하다가 작업을 더 이상 진행할 상황이 아니면, 일단 wait()을 호출하여 스레드가 락을 반납하고 기다리게 한다. 그러면 다른 스레드가 락을 얻어 해당 객체에 대한 작업을 수행할 수 있게 된다.
+
+나중에 작업을 진행할 수 있는 상황이 되면 notify()를 호출해서 , 작업을 중단했던 스레드가 다시 락을 얻어 작업을 진행할 수 있게 한다.
+
+wait()이 호출되면, 실행 중이던 스레드는 해당 객체의 대기실(waiting  pool)에서 통지를 기다린다.
+
+notify()가 호출되면, 해당 객체의 대기실에 있는 모든 스레드에게 통보를하지만, 그래도 lock을 얻을 수 있는 것은 하나의 스레드일 뿐이고 나머지 스레드는 통보를 받긴 했지만, lock을 얻지 못하면 다시 lock을 기다리는 신세가 된다.
+
+
+
+#### Lock과 Condition을 이용한 동기화
+
+동기화할 수 있는 방법은 synchronized블럭 외에도 'java.util.concurrent.locks' 패키지가 제공하는 lock클래스들을 이용하는 방법이 있다.
+
+synchronized 블럭으로 동기화를 하면 자동적으로 lock이 잠기고 풀리기 때문에 편리하다. 심지어 synchronized블럭 내에서 예외가 발생해도 lock은 자동적으로 풀린다.
+
+
+
+그러나 때로는 같은 메서드 내에서만 lock을 걸 수 있다는 제약이 불편하기도 하다. 그럴 때 이 lock클래스를 사용한다. lock클래스의 종류는 3가지가 있다.
+
+
+
+1. ReentrantLock : 재진입이 가능한 lock. 가장 일반적인 배타 lock
+2. ReentrantReadWriteLock : 읽기에는 공유적이고, 쓰기에는 배타적인 lock
+3. StampedLock : ReentrantReadWriteLock에 낙관적인 lock의 기능을 추가
 
 
 
@@ -249,8 +442,7 @@ thread.setPriority(우선순위);
 
 
 
-
-
+### 6. 데드락
 
 
 
@@ -264,9 +456,11 @@ thread.setPriority(우선순위);
 
 이것이 자바다
 
+자바의 정석
+
 참조 : https://widevery.tistory.com/27
 
 참조 : https://sas-study.tistory.com/218
 
-
+참조 : https://gosmcom.tistory.com/19
 
