--- a/10주차.md
+++ b/10주차.md
@@ -238,7 +238,9 @@ thread.setPriority(우선순위);
 
 
 
-순위가 높은 스레드가 실행 기회를 더 많이 가지기 때문에 우선순위가 낮은 스레드보다 계산 작업을 빨리 끝낸다. 쿼드 코어일 경우에는 4개의 스레드가 병렬성으로 실행될 수 있기 때문에 4개 이하의 스레드를 실행할 경우에는 우선순위 방식이 크게 영향을 미치지 못한다. 최소한 5개 이상의 스레드가 실행되어야 우선순위의 영향을 받는다.
+순위가 높은 스레드가 실행 기회를 더 많이 가지기 때문에 우선순위가 낮은 스레드보다 계산 작업을 빨리 끝낸다. 쿼드 코어일 경우에는 4개의 스레드가 병렬성으로 실행될 수 있기 때문에 4개 이하의 스레드를 실행할 경우에는 우선순위 방식이 크게 영향을 미치지 못한다. 
+
+*최소한 5개 이상의 스레드가 실행되어야 우선순위의 영향을 받는다.*
 
 
 
@@ -446,6 +448,26 @@ synchronized 블럭으로 동기화를 하면 자동적으로 lock이 잠기고 
 
 
 
+ **교착 상태**(영어: deadlock)란 두 개 이상의 작업이 서로 상대방의 작업이 끝나기 만을 기다리고 있기 때문에 결과적으로 아무것도 완료되지 못하는 상태를 가리킨다. 
+
+예를 들어 하나의 사다리가 있고, 두 명의 사람이 각각 사다리의 위쪽과 아래쪽에 있다고 가정한다. 이때 아래에 있는 사람은 위로 올라 가려고 하고, 위에 있는 사람은 아래로 내려오려고 한다면, 두 사람은 서로 상대방이 사다리에서 비켜줄 때까지 하염없이 기다리고 있을 것이고 결과적으로 아무도 사다리를 내려오거나 올라가지 못하게 되듯이, 전산학에서 교착 상태란 다중 프로그래밍 환경에서 흔히 발생할 수 있는 문제이다.
+
+
+
+ 이 구조에서 Object A와 Obejct B는 같은 Class의 인스턴스이다. 구현에 따라 인스턴스별로 각기 다른 Lock을 갖게 할 수 있다. test1() test2() method는 synchronized로 선언되어 객체(this)를 Lock 객체로 사용하는 임계영역을 가지고 있다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/쓰레드6.PNG"> </img>
+
+
+
+Tread 1 가 Object A 의 임계영역에 진입을 한 후 임계영역을 탈출하지 않은 상태에서 Object B의 임계영역에 진입하려 한다. 그런데 이때 이미 Thread 1는 Object B의 임계영역에 진입 한 상태가 되어 Thread 1 은 Object B 의 임계역역 시작 지점에서 BLOCKED 된다. 이 상황에서 Object B의 임계영역에 진입한 Thread 2는 Thread 1이 Lock 을 확보한 Object A의 임계 영역을 진입하려 한다. 이 역시 BLOCKED 된다. 양 Thread 는 영원한 BLOCKED 상태에 들어갔다.
+
+
+
+
+
 
 
 
@@ -458,9 +480,10 @@ synchronized 블럭으로 동기화를 하면 자동적으로 lock이 잠기고 
 
 자바의 정석
 
-참조 : https://widevery.tistory.com/27
+출처: https://widevery.tistory.com/27
 
-참조 : https://sas-study.tistory.com/218
+출처: https://sas-study.tistory.com/218
 
-참조 : https://gosmcom.tistory.com/19
+출처: https://gosmcom.tistory.com/19
 
+출처: https://rightnowdo.tistory.com/entry/JAVA-concurrent-programming-교착상태Dead-Lock [지금 당장 해!!!]
