--- a/11주차.md
+++ b/11주차.md
@@ -183,6 +183,51 @@ System.out.println(Direcation.WEST == Direction.valueOf("WEST")); //ture
 
 
 
+Enum 클래스는 모든 자바 열거체의 공통된 조상 클래스이다.
+
+| 메소드                        | 설명                                                         |
+| ----------------------------- | ------------------------------------------------------------ |
+| static E values()             | 해당 열거체의 모든 상수를 저장한 배열을 생성하여 반환함.     |
+| static E valueOf(String name) | 전달된 문자열과 일치하는 해당 열거체의 상수를 반환함.        |
+| protected void finalize()     | 해당 Enum 클래스가 final 메소드를 가질 수 없게 됨.           |
+| String name()                 | 해당 열거체 상수의 이름을 반환함.                            |
+| int ordinal()                 | 해당 열거체 상수가 열거체 정의에서 정의된 순서(0부터 시작)를 반환함. |
+
+http://www.tcpschool.com/java/java_api_enum
+
+
+
+values() 와 valueOf()의 경우는 2번항목에 예제가 되어있다.
+
+ordinal() 메소드
+
+ordinal() 메소드는 해당 열거체 상수가 열거체 정의에서 정의된 순서를 반환한다.
+
+이때 반환되는 값은 열거체 정의에서 해당 열거체 상수가 정의된 순서이며, 상숫값 자체가 아니다.
+
+
+
+```
+enum Rianbow {RED, ORANGE, YELLOW, GREEN, BLUE, INDIGO, VIOLET}
+
+public class EnumEx{
+	public static void main(String[] args){
+		int idx = Rainbow.YELLOW.ordinal();
+		
+		System.out.println(idx);
+	}
+}
+
+//결과
+2 // 0번부터시작하기 때문에 2번째
+```
+
+
+
+
+
+### 4. EnumSet
+
 
 
 
