--- a/11주차.md
+++ b/11주차.md
@@ -189,7 +189,6 @@ Enum 클래스는 모든 자바 열거체의 공통된 조상 클래스이다.
 | ----------------------------- | ------------------------------------------------------------ |
 | static E values()             | 해당 열거체의 모든 상수를 저장한 배열을 생성하여 반환함.     |
 | static E valueOf(String name) | 전달된 문자열과 일치하는 해당 열거체의 상수를 반환함.        |
-| protected void finalize()     | 해당 Enum 클래스가 final 메소드를 가질 수 없게 됨.           |
 | String name()                 | 해당 열거체 상수의 이름을 반환함.                            |
 | int ordinal()                 | 해당 열거체 상수가 열거체 정의에서 정의된 순서(0부터 시작)를 반환함. |
 
@@ -230,6 +229,67 @@ public class EnumEx{
 
 
 
+EnumSet은 열거형 타입으로 지정해놓은 요소들을 가장 쉽고 빠르게 배열처럼 요소들을 다룰수 있는 기능을 제공한다.
+
+EnumSet은 기술상으로 원소갯수가 2^6 = 64개를 넘지 않을 경우에 겉은 Set기반이지만 내부적으로 long 데이터형의 비트필드를 사용하게 된다.
+
+비트필드는 2의 제곱수들로 이루어져 메모리 공간도 적게 차지하고 속도도 빠른데 이런 원리를 기반으로 돌아가는 세트가 바로 EnumSet이다.
+
+
+
+```
+public class EnumSetTest{
+	enum Day{
+		SUNDAY,MONDAY,TUESDAY,WEDNESDAY,THURSDAY,FRIDAY,SATURDAY
+	}
+	
+	public static void main(String[] args){
+		System.out.println("==================");
+		EnumSet es = EnumSet.allOf(Day.class);
+		EnumSet es2 = EnumSet.copyOf(es); //clone();
+		System.out.println("EnumSet Day : "+ es2);
+		es2 = EnumSet.noneOf(Day.class);
+		System.out.println("EnumSet Day : "+ es2);
+		
+		es = EnumSet.of(Day.FRIDAY, Day.WEDNESDAY);
+		System.out.println("es : "+ es);
+		es2 = EnumSet.complementOf(es);
+		System.out.println("es2 : "+ es2);
+		es2 = EnumSet.range(Day.TUESDAY, Day.FRIDAY);
+		System.out.println("es2 : "+ es2);
+	}
+}
+//
+==================
+EnumSet Day: [SUNDAY, MONDAY, TUESDAY, WEDNESDAY, THURSDAY, FRIDAY, SATURDAY]
+EnumSet Day: []
+es: [WEDNESDAY, FRIDAY]
+es2: [SUNDAY, MONDAY, TUESDAY, THURSDAY, SATURDAY]
+es2: [TUESDAY, WEDNESDAY, THURSDAY, FRIDAY]
+```
+
+
+
+allOf() 라는 메소드를 이용해서 열거형 Day에 있는 요소들을 다 가져온다. 쓰는 방식은 예제처럼 괄호안에 열거형 이름.class 를 붙인 형태를 사용한다.
+
+이름.class인 이유는 열거형을 만들면 그와 관련된 .class가 생성된다.
+
+noneOf() 메소드는 세트를 비우는 메소드이다.
+
+of() 메소드는 해당 요소를 찾아서 넣으라는 것이다. 
+
+complementOf() 메소드는 괄호안의 요소들만 빼고 세트를 구성하라는 것이다. 요소 안에는 현재 WEDNESDAY, FRIDAY가 들어가 있으니 나머지 요일들이 출력된 것이다.
+
+range() 메소드는 세트의 구간을 정해서 출력할수 있다. TUESDAY 부터 FRIDAY 까지  `TUESDAY >= x >= FRIDAY ` 따라서 TUESDAY, WEDNESDAY, THURSDAY, FRIDAY가 출력된다.
+
+
+
+또한 EnumSet의 명령을 접하면서 객체 생성을 안하는 이유는 EnumSet의 메소드들이 static으로 구성되어있어서 가능한 것이다. 또한, EnumSet이 추상클래스로 되어있다.
+
+
+
+
+
 
 
 
@@ -238,3 +298,6 @@ public class EnumEx{
 
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
+JAVA의 정석
+
+참조: http://alecture.blogspot.com/2012/11/enumset.html
