--- a/12주차.md
+++ b/12주차.md
@@ -30,6 +30,278 @@
 
 
 
+### 1. 애노테이션 정의하는 방법
+
+새로운 애노테이션을 정의하는 방법은 아래와 같다. '@' 기호를 붙이는 것을 제외하면 인터페이스를 정의하는 것과 동일하다.
+
+
+
+```
+@interface 애노테이션 이름 {
+	타입요소이름(); //애노테이션의 요소를 선언한다.
+	...
+}
+```
+
+@Override는 애노테이션이고 Override는 애노테이션의 타입이다.
+
+
+
+
+
+#### 애노테이션의 요소
+
+애노테이션 내에 선언된 메서드를 '애노테이션의 요소(element)' 라고 하며, 아래에 선언된 TestInfo애노테이션은 다섯 개의 요소를 갖는다.
+
+
+
+```
+@interface TestInfo {
+	int count();
+	String testedBy();
+	String[] testTools();
+	TestType testType(); // enum TestType {FIRST, FINAL}
+	DateTime testDate(); // 자신이 아닌 다른 애노테이션(@DateTime)을 포함할 수 있다.
+}
+
+@interface DateTime{
+	String yymmdd();
+	String hhmmss();
+
+}
+```
+
+
+
+애노테이션의 요소는 반환값이 있고 매개변수는 없는 추상 메소드의 형태를 가지며, 상속을 통해 구현하지 않아도 된다. 다만, 애노테이션을 적용할 때 이 요소들의 값을 빠짐없이 지정해주어야 한다. 요소의 이름도 같이 적어주므로 순서는 상관없다.
+
+
+
+```
+@TestInfo(
+	count = 3, testedBy = "Kim", testTools = {"JUnit","Autotester"},
+    testType = TestType.FIRST,
+    testDate = @DateTime(yyymmdd = "160101", hhmmss = "235959")
+)
+
+public class NewClass {...}
+```
+
+
+
+애노테이션의 각 요소는 기본값을 가질 수 있으며, 기본값이 있는 요소는 애노테이션을 적용할 때 값을 지정하지 않으면 기본값이 사용된다.
+
+
+
+```
+@interface TestInfo{
+	String value();
+}
+
+@TestInfo("passed") //@TestInfo(value = "passed")와 동일
+class NewClass {...}
+```
+
+
+
+요소의 타입이 배열인 경우, 괄호{}를 사용해서 여러 개의 값을 지정할 수 있다.
+
+```
+@interface TestInfo{
+	String[] testTools();
+}
+
+@TestInfo(testTools = {"Junit", "AutoTester"}) //값이 여러 개인 경우
+@TestInfo(testTools = "Junit") 				   //값이 하나일 때는 괄호{} 생략
+@TestInfo(testTools = {}) 					   //값이 없을 때는 괄호{}가 반드시 필요
+```
+
+
+
+
+
+#### 애노테이션 요소의 규칙
+
+
+
+애노테이션의 요소를 선언할 때 반드시 지켜야 하는 규칙이 있다.
+
+* 요소의 타입은 기본형, String, enum, 애노테이션, Class 만 허용된다.
+* ()안에 매개변수를 선언할 수 없다.
+* 예외를 선언할 수 없다.
+* 요소를 타입 매개변수로 정의할 수 없다.
+
+```
+@interface AnnoTest {
+	int id = 100;
+	String major(int i, int j); //에러
+	String minor() throws Exception; //에러
+	ArrayList<T> list(); //에러
+}
+```
+
+
+
+
+
+
+
+#### java.lang.annotation.Annotation
+
+
+
+모든 애노테이션의 조상은 Annotation이다. 그러나 애노테이션은 상속이 허용되지 않으므로 다음과 같이 명시적으로 Annotation을 조상으로 지정할 수 없다.
+
+```
+@interface TestInfo extends Annotation {  //불가능
+	int count();
+	String testedBy();
+	...
+}
+```
+
+
+
+Annotation은 다음처럼 인터페이스로 정의되어 있다.
+
+```
+package java.lang.annotation;
+
+public interface Annotation { //Annotation자신은 인터페이스이다.
+	boolean equals(Object obj);
+	int hashCode();
+	String toString();
+	
+	Class<? extends Annotation> annotationType(); //애노테이션의 타입을 반환
+}
+```
+
+
+
+
+
+
+
+#### 마커 애노테이션 Maker Annotation
+
+
+
+값을 지정할 필요가 없는 경우, 애노테이션의 요소를 하나도 정의하지 않을 수 있다. Serializable 이나 Cloneable 인터페이스 처럼, 요소가 하나도 정의되지 않은 애노테이션을 마커 애노테이션이라고 한다.
+
+
+
+```
+@Target(ElementType.METHOD)
+@Retention(RetentionPolicy.SOURCE)
+public @interface Override {} // 마커 애노테이션
+```
+
+
+
+
+
+
+
+### 2. [@Retention](https://github.com/retention)
+
+
+
+#### 메타 애노테이션
+
+매타 애노테이션은 애노테이션을 위한 애노테이션, 즉 에노테이션에 붙이는 애노테이션으로 애노테이션을 정의할 때 애노테이션의 적용대상(target) 이나 유지기간(retention)등을 지정하는데 사용된다.
+
+
+
+
+
+애노테이션이 유지(retention) 되는 기간을 지정하는데 사용된다. 애노테이션의 유지 정책(retention policy)의 종류는 다음과 같다.
+
+
+
+| 유지정책 | 의미                                             |
+| -------- | ------------------------------------------------ |
+| SOURCE   | 소스파일에만 존재. 클래스 파일에는 존재하지 않음 |
+| CLASS    | 클래스 파일에 존재. 실행시에 사용불가. 기본값    |
+| RUNTIME  | 클래스 파일에 존재. 실행시에 사용가능.           |
+
+
+
+'@Override' , '@SuppressWarnings' 처럼 컴파일러가 사용하는 애노테이션은 유지 정책이 'SOURCE' 이다. 컴파일러를 직접 작성할 것이 아니면 필요없다.
+
+
+
+```
+@Target(ElementType.METHOD)
+@Retention(RetentionPolicy.SOURCE)
+public @interface Override {}
+```
+
+
+
+유지 정책을 RUNTIME 으로 하면, 실행 시에 리플렉션(reflection)을 통해 클래스 파일에 저장된 애노테이션의 정보를 읽어서 처리할 수 있다.
+
+@FunctionalInterface는 @Override 처럼 컴파일러가 체크해주는 애노테이션이지만, 실행 시에도 사용되므로 유지 정책이 RUNTIME으로 되어 있다.
+
+
+
+@FunctionalInterface은 함수형 인터페이스를 선언할 때, 올방르게 선언했는지 확인하고, 잘못된 경우 에러를 발생시킨다.
+
+
+
+```
+@Documented
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.TYPE)
+public @interface FunctionalInterface {}
+```
+
+
+
+유지 정책 'CLASS'는 컴파일러가 애노테이션의 정보를 클래스 파일에 저장할 수 있게는 하지만, 클래스 파일이 JVM에 로딩될 때는 애노테이션의 정보가 무시되어 실행 시에 애노테이션에 대한 정보를 얻을 수 없다.  이것이 'CLASS'가 유지정책의 기본값임에도 불구하고 잘 사용되지 않는 이유이다.
+
+
+
+
+
+### 3. [@Target](https://github.com/target)
+
+
+
+애노테이션이 적용가능한 대상을 지정하는데 사용된다. 아래는 @SuppressWarnings를 정의한 것인데, 이 애노테이션에 적용할 수 있는 대상을 @Target 으로 지정하였다.
+
+앞서 언급한 것과 같이 여러개의 값을 지정할 때는 배열에서 처럼 괄호 {} 를 사용해야 한다.
+
+
+
+````
+@Target ({TYPE,	FIELD, METHOD, PARAMETER, CONSTRUCTOR, LOCAL_VARIABLE})
+@Retention(RetentionPolicy.SOURCE)
+public @interface SuppressWarnings{
+	String[] value();
+}
+````
+
+
+
+@Target으로 지정할 수 있는 애노테이션 적용 대상의 종류는 아래와 같다.
+
+
+
+| 대상타입        | 의미                            |
+| --------------- | ------------------------------- |
+| ANNOTATION_TYPE | 애노테이션                      |
+| CONSTRUCTOR     | 생성자                          |
+| FIELD           | 필드(멤버변수, Enum상수)        |
+| LOCAL_VARIABLE  | 지역변수                        |
+| METHOD          | 메서드                          |
+| PACKAGE         | 패키지                          |
+| PARAMETER       | 매개변수                        |
+| TYPE            | 타입(클래스, 인터페이스, enum)  |
+| TYPE_PARAMETER  | 타입 매개변수(JDK1.8)           |
+| TYPE_USE        | 타입이 사용되는 모든 곳(JDK1.8) |
+
+
+
 
 
 
