--- a/12주차.md
+++ b/12주차.md
@@ -73,6 +73,8 @@
 
 
 
+
+
 애노테이션의 요소는 반환값이 있고 매개변수는 없는 추상 메소드의 형태를 가지며, 상속을 통해 구현하지 않아도 된다. 다만, 애노테이션을 적용할 때 이 요소들의 값을 빠짐없이 지정해주어야 한다. 요소의 이름도 같이 적어주므로 순서는 상관없다.
 
 
@@ -86,6 +88,8 @@
 
 public class NewClass {...}
 ```
+
+
 
 
 
@@ -104,7 +108,11 @@ class NewClass {...}
 
 
 
+
+
 요소의 타입이 배열인 경우, 괄호{}를 사용해서 여러 개의 값을 지정할 수 있다.
+
+
 
 ```
 @interface TestInfo{
@@ -244,7 +252,7 @@ public @interface Override {}
 
 
 
-@FunctionalInterface은 함수형 인터페이스를 선언할 때, 올방르게 선언했는지 확인하고, 잘못된 경우 에러를 발생시킨다.
+ *@FunctionalInterface은 함수형 인터페이스를 선언할 때, 올방르게 선언했는지 확인하고, 잘못된 경우 에러를 발생시킨다.*
 
 
 
@@ -306,6 +314,110 @@ public @interface SuppressWarnings{
 
 
 
+### 4. [@Documented](https://github.com/documented)
+
+
+
+애노테이션에 대한 정보가 javadoc으로 작성한 문서에 포함되도록 한다. 자바에서 제공하는 기본 애노테이션 중에 `@Override` 와 `@SuppressWarnings` 를 제외하고는 모두 이 메타 애노테이션이 붙어 있다.
+
+
+
+```
+@Documented
+@Retention(RetentionPolicy.RUNTIME)
+@Target(ElementType.TYPE)
+public @interface FunctionalInterface {}
+```
+
+
+
+
+
+
+
+### 5. 애노테이션 프로세서
+
+
+
+
+
+애노테이션 프로세서란 애노테이션을 이용해서 프로세스를 처리하는것을 의미한다. 특히 애노테이션 프로세서의 특징은 컴파일 단계에서 애노테이션에 정의된 액션을 처리하는데, 이는 우리의 애플리케이션이 실행되기 전 체킹을 해주기 때문에 애노테이션으로 의도한대로 이루어지지 않을 경우 에러나 경고를 보여주기도 하며, 소스코드.java와 바이트코드.class를 생성해주기도 한다.
+
+Annotation Precessor를 이용하여 컴파일 단계에서 소스를 조작할 수 있게 되므로 이와 관련된 라이브러리에는 Annotataion Processor을 사용한다고 생각하면 된다.
+
+
+
+대표적인 사용의 예로 `Lombok` 이라는 라이브러리가 있다.
+
+lombok을 사용하기 위해서는 pom.xml에 라이브러리의 의존성을 추가해야한다. 또한 plugin 설치와 annotation processing을 활성화 해야한다.
+
+
+
+```
+public class Member{
+	private String name;
+	private int age;
+}
+```
+
+
+
+여기 `Member` 라는 클래스가 있다.
+
+필드가 2개밖에 되지 않은 가벼운 객체이다. 우리는 이런 Entity 혹은 DTO로 활용되는 객체를 컨트롤하기 위해서 getter/setter 등을 이용해서 접근하곤 한다.
+
+
+
+```
+public class Member {
+    private String name;
+    private int age;
+
+    public String getName() {
+        return name;
+    }
+
+    public void setName(String name) {
+        this.name = name;
+    }
+
+    public int getAge() {
+        return age;
+    }
+
+    public void setAge(int age) {
+        this.age = age;
+    }
+}
+```
+
+
+
+조금 번거롭긴하지만 객체지향 프로그래밍의 관점에서 객체의 은닉화를 위해 이런 방식을 사용해야 했다.
+
+
+
+하지만 롬복을 사용하면 다음 처럼 편리하게 사용 할 수 있다.
+
+
+
+```
+@Getter
+@Setter
+public class Member{
+	private String name;
+	private int age;
+}
+```
+
+
+
+
+
+
+
+
+
 
 
 참고 문헌 
@@ -315,3 +427,5 @@ public @interface SuppressWarnings{
 JAVA의 정석
 
 출처: https://sjh836.tistory.com/8 [빨간색코딩]
+
+출처: https://better-dev.netlify.app/java/2020/09/07/thejava_16/
