--- a/13주차.md
+++ b/13주차.md
@@ -12,6 +12,97 @@
 
 
 
+### 1. 스트림 (Stream) / 버퍼 (Buffer) / 채널 (Channel) 기반의 I/O
+
+
+
+프로그램에서는 데이터를 외부에서 읽고 다시 외부로 출력하는 작업이 빈번히 일어난다.
+
+자바에서 데이터는 스트림(Stream)을 통해 입출력되므로 스트림의 특징을 잘 이해해야 한다.
+
+스트림은 단일 방향으로 연속적으로 흘러가는 것을 말하는데, 물이 높은 곳에서 낮은 곳으로 흐르듯이 데이터는 출발지에서 나와 도착지로 들어간다는 개념
+
+
+
+- 스트림은 데이터를 읽고 기록하는 중간역할을 한다.
+
+- 스트림은 빨대다.
+
+- 빨대는 음료수를 마시는 중간역할을 한다.
+
+- 빨대는 입에 있는 음료수를 다시 내뱉는 중간역할을 한다.
+
+- 스트림은 단 방향 빨대이다. 음료수를 내뱉고 다시 마시려면 빨대가 **2개 필요**하다.
+
+
+
+
+
+
+
+#### 입력 스트림과 출력 스트림
+
+
+
+프로그램이 출발지냐 또는 도착지냐에 따라서 스트림의 종류가 결정되는데, 프로그램이 데이터를 입력받을 때에는 입력 스트림(InputStream) 이라 부르고, 프로그램이 데이터를 보낼 때에는 출력 스트림(OutputStream) 이라고 부른다. 
+
+
+
+
+
+#### 스트림의 종류
+
+
+
+스트림은 크게 문자 단위로 처리하느냐, 바이트 단위로 처리하느냐에 따라서 나눌 수 있습니다.
+
+
+
+먼저 문자 스트림의 구성도는 아래와 같이 나타납니다. 
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/스트림1.PNG"> </img>
+
+
+
+입력 문자 스트림은 Reader라는 단어가 붙어있습니다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/스트림2.PNG"> </img>
+
+
+
+출력 문자 스트림은 Writer라는 단어가 붙어있습니다.
+
+
+
+
+
+
+
+#### InputStream
+
+
+
+InputStream은 바이트 기반 입력 스트림의 최상위 클래스로 추상 클래스이다. 모든 바이트 기반 입력 스트림은 이 클래스를 상속받아서 만들어 진다.
+
+다음과 같이 FileInputStream, BufferedInputStream, DataInputStream 클래스는 모두 InputStream 클래스를 상속하고 있다.
+
+
+
+InputStream 클래스에는 바이트 기반 입력 스트림이 기본적으로 가져야 할 메소드가 정의되어 있다. 
+
+
+
+| 리턴타입 | 메소드                           | 설명                                                         |
+| -------- | -------------------------------- | ------------------------------------------------------------ |
+| int      | read()                           | 입력 스트림으로부터 1바이트를 읽고 읽은 바이트를 리턴한다.   |
+| int      | read(byte[] b)                   | 입력 스트림으로부터 읽은 바이트들을 매개값으로 주어진 바이트 배열 b에 저장하고 실제로 읽은 바이트 수를 리턴한다. |
+| int      | read(byte[] b, int off, int len) | 입력 스트림으로부터 len개의 바이트만큼 읽고 매개값으로 주어진 바이트 배열 b[off] 부터 len개 까지 저장한다. 그리고 실제로 읽은 바이트수인 len개를 리턴한다. 만약 len개를 모두읽지 못하면 실제로 읽은 바이트 수를 리턴한다. |
+| void     | close()                          | 사용한 시스템 자원을 반납하고 입력 스트림을 닫는다.          |
+
 
 
 
@@ -27,3 +118,5 @@
 ------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------
 
 JAVA의 정석
+
+출처: https://elena90.tistory.com/entry/Java-파일-입출력스트림InputStreamOutputStreamReaderWriter [오니님의짱꺤뽀]
