--- a/13주차.md
+++ b/13주차.md
@@ -10,9 +10,27 @@
 
 
 
+## I/O
+
+I/O란 Input 과 Output의 약자로 입력과 출력, 간단히 줄여서 입출력이라고 한다.
+
+입출력은 컴퓨터 내부 또는 외부의 장치와 프로그램간의 데이터를 주고받는 것을 말한다.
+
+
+
+
+
+
+
 
 
 ### 1. 스트림 (Stream) / 버퍼 (Buffer) / 채널 (Channel) 기반의 I/O
+
+
+
+
+
+### 스트림
 
 
 
@@ -20,7 +38,7 @@
 
 자바에서 데이터는 스트림(Stream)을 통해 입출력되므로 스트림의 특징을 잘 이해해야 한다.
 
-스트림은 단일 방향으로 연속적으로 흘러가는 것을 말하는데, 물이 높은 곳에서 낮은 곳으로 흐르듯이 데이터는 출발지에서 나와 도착지로 들어간다는 개념
+스트림은 단일 방향으로 연속적으로 흘러가는 것을 말하는데, 물이 높은 곳에서 낮은 곳으로 흐르듯이 데이터는 출발지에서 나와 도착지로 들어간다는 개념이다.
 
 
 
@@ -38,15 +56,11 @@
 
 
 
-
-
 #### 입력 스트림과 출력 스트림
 
 
 
 프로그램이 출발지냐 또는 도착지냐에 따라서 스트림의 종류가 결정되는데, 프로그램이 데이터를 입력받을 때에는 입력 스트림(InputStream) 이라 부르고, 프로그램이 데이터를 보낼 때에는 출력 스트림(OutputStream) 이라고 부른다. 
-
-
 
 
 
@@ -78,6 +92,126 @@
 
 
 
+스트림은 크게 InputStream , OutputStream이 있다.
+
+InputStream 은 입력장치로부터 입력을 받고 프로그램을 도착지로 향하는 Stream이다.
+
+OutputStream은 프로그램을 시작점으로 출력장치 및 프로그램을 목적지로 하는 Stream이다.
+
+
+
+
+
+
+
+### 버퍼(Buffer)
+
+
+
+**버퍼란 임시 저장 공간을 의미 한다.** 임시 저장 공간이라고 해서 쌩뚱맞게 보일 수 있지만 정확히 말하면 A와 B가 서로 입출력을 수행하는데에 있어서 속도차이를 극복하기 위해 사용하는 임시 저장 공간을 의미 한다.
+
+
+
+프로그래밍이나 운영체제에서 사용하는 버퍼는 거의 대부분 **CPU**와 **보조기억장치** 사이에서 사용되는 임시 저장 공간을 의미한다.
+
+
+
+예를 들어 CPU는 1초에 100개의 데이터를 처리할 수 있지만 보조기억장치는 CPU가 처리 할 수 있는 일을 1초에 3개씩 보낸다. 이렇게 되면 CPU의 효율성이 떨어진다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/스트림5.PNG"> </img>
+
+
+
+이 때 버퍼를 사용한다. 버퍼는 CPU 내부에 있는 캐시메모리 보다는 느리지만 보조 기억 장치보다 훨씬 빠른 주기억 장치(RAM)를 이용한다.
+
+보조기억장치는 주 기억장치의 버퍼로 마련해둔 공간에 데이터를 열심히 보내 쌓아 둔다.
+
+CPU는 처리가 빠르므로 밀려 있는 다른 일을 처리한 후 시간이 남을때 가끔 버퍼를 확인하여 데이터가 모두 쌓였는지 확인하고 모두 쌓였다면 가져다 한꺼번에 처리한다.
+
+
+
+이 처럼 버퍼 라는 것은 속도차이가 큰 두 대상이 입출력을 수행할 때 효율성을 위해 사용하는 임시 저장공간이라고 할 수 있다.
+
+
+
+
+
+### 채널
+
+기존의 Java I/O는 Blocking 하고, Java NIO는 Non-blocking 하다는 사실을 알고 있다. 
+
+그렇기에 Java IO에서 스레드에서 Reader와 Writer만 존재해, Reader로 블로킹을 하고, Writer로 블로킹을 풀어주면 된다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/스트림6.PNG"> </img>
+
+
+
+하지만, Java NIO는 Non-blocking 방식이다. 따라서, 데이터를 주고 받기 위해서 스레드와 데이터가 들어간 버퍼사이의 일종의 터널을 만들어주어야 한다. 이것이 채널이 하는 역할이다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/스트림7.PNG"> </img>
+
+
+
+ 그리고 이 채널은 파일, 소켓, 데이터그램 등과 같은 다양한 I/O 소스로부터 데이터 블록을 버퍼로 쓰거나 읽어올 수 있다.
+
+
+
+
+
+**- 채널의 특징**
+
+
+
+- Socket과 연결 되어, 입출력 역할을 수행한다
+- 입력과 출력을 동시에 수행한다.
+- Selector와 연결되어 있고, 하나에 Selector에는 다수의 채널이 존재할 수 있다.
+- Blocking 된 스레드를 깨우거나, 다시 Blocking할 수 있다.
+
+
+
+
+
+
+
+### 2. InputStream과 OutputStream
+
+
+
+스트림은 바이트단위로 데이터를 전송하며 입출력 대상에 따라 다음과 같은 입출력스트림이 있다.
+
+
+
+| 입력스트림           | 출력스트림            | 입출력 대상의 종류          |
+| -------------------- | --------------------- | --------------------------- |
+| FileInputStream      | FileOutputStream      | 파일                        |
+| ByteArrayInputStream | ByteArrayOutputStream | 메모리(byte 배열)           |
+| PipedInputStream     | PipedOutputStream     | 프로세스(프로세스간의 통신) |
+| AudioInputStream     | AudioOutputStream     | 오디오 장치                 |
+
+
+
+자바에서는 java.io 패키지를 통해서 많은 종류의 입출력관련 클래스들을 제공하고 있으며, 입출력을 처리할 수 있는 표준화된 방법을 제공함으로써 입출력의 대상이 달라져도 동일한 방법으로 입출력이 가능하기 때문에 프로그래밍을 하기에 편리하다.
+
+
+
+| InputStream                          | OutputStream                           |
+| ------------------------------------ | -------------------------------------- |
+| abstract int read()                  | abstract void write(int b)             |
+| int read(byte[] b)                   | void write(byte[] b)                   |
+| int read(byte[] b, int off, int len) | void write(byte[] b, int off, int len) |
+
+InputStream과 OutputStream에 정의된 읽기와 쓰기를 수행하는 메서드 이다.
+
+
+
+InputStream의 read()와 OutputStream의 write(int b)는 입출력의 대상에 따라 읽고 쓰는 방법이 다를 것이기 때문에 각 상황에 알맞게 구현하라는 의미에서 추상 메서드로 정의되어 있다.
+
 
 
 
@@ -102,6 +236,111 @@ InputStream 클래스에는 바이트 기반 입력 스트림이 기본적으로
 | int      | read(byte[] b)                   | 입력 스트림으로부터 읽은 바이트들을 매개값으로 주어진 바이트 배열 b에 저장하고 실제로 읽은 바이트 수를 리턴한다. |
 | int      | read(byte[] b, int off, int len) | 입력 스트림으로부터 len개의 바이트만큼 읽고 매개값으로 주어진 바이트 배열 b[off] 부터 len개 까지 저장한다. 그리고 실제로 읽은 바이트수인 len개를 리턴한다. 만약 len개를 모두읽지 못하면 실제로 읽은 바이트 수를 리턴한다. |
 | void     | close()                          | 사용한 시스템 자원을 반납하고 입력 스트림을 닫는다.          |
+| int      | available()                      | 스트림으로부터 읽어 올 수 있는 데이터의 크기를 반환한다.     |
+| void     | mark(int readlimit)              | 현재위치를 표시해 놓는다. 후에 reset()에 의해서 표시해 놓은 위치로 다시 돌아갈 수 있다. readlimit은 되돌아갈 수 있는 byte의 수이다. |
+| boolean  | markSupported()                  | mark()와 reset()을 지원하는지를 알려준다. mark()와 reset() 기능을 지원하는 것은 선택적이므로, mark()와 reset()을 사용하기 전에 markSupported()를 호출해서 지원여부를 확인해야 한다. |
+| void     | reset()                          | 스트림에서의 위치를 마지막으로 mark()이 호출되었던 위치로 되돌린다. |
+| long     | skip(long n)                     | 스트림에서 주어진 길이(n) 만큼을 건너뛴다.                   |
+
+
+
+
+
+##### OutputStream
+
+
+
+InputStream과 반대되는 개념으로 OutputStream 추상 클래스는 데이터가 나가는 통로의 역할에 관해 규정하고 있는 추상 클래스이다.
+
+
+
+| 메서드명                               | 설명                                                         |
+| -------------------------------------- | ------------------------------------------------------------ |
+| void close()                           | 입력소스를 닫음으로써 사용하고 있던 자원을 반환한다.         |
+| void flush()                           | 스트림의 버퍼에 있는 모든 내용을 출력소스에 쓴다.            |
+| abstract void write(int b)             | 주어진 값을 출력소스에 쓴다.                                 |
+| void write(byte[] b)                   | 주어진 배열 b에 저장된 모든 내용을 출력소스에 쓴다.          |
+| void write(byte[] b, int off, int len) | 주어진 배열 b에 저장된 내용중에서 off번째 부터 len개 만큼만을 읽어서 출력소스에 쓴다. |
+
+
+
+
+
+
+
+### 3. Byte와 Character 스트림
+
+
+
+바이트기반 스트림에는 inputstream, outputstream과 더불어 ByteArrayInputStream, ByteArrayOutputStream, FileInputStream, FileOutputStream 이 있다.
+
+
+
+ByteArrayInputStream/ByteArrayOutputStream은 메모리, 즉 바이트배열에 데이터를 입출력 하는데 사용되는 스트림이다. 주로 다른 곳에 입출력하기 전에 데이터를 임시로 바이트 배열에 담아서 변환 등의 작업을 하는데 사용된다.
+
+
+
+```
+import java.io.ByteArrayInputStream;
+import java.io.ByteArrayOutputStream;
+import java.util.Arrays;
+
+public class IOEx1 {
+    public static void main(String[] args) {
+        byte[] inSrc = {0,1,2,3,4,5,6,7,8,9};
+        byte[] outSrc = null;
+
+        ByteArrayInputStream input = null;
+        ByteArrayOutputStream output = null;
+
+        input = new ByteArrayInputStream(inSrc);
+        output = new ByteArrayOutputStream();
+
+        int data = 0;
+
+        while((data = input.read())!= -1){
+            output.write(data); //void write(int b)
+        }
+
+        outSrc = output.toByteArray(); // 스트림의 내용을 byte배열로 반환한다.
+
+        System.out.println("Input Source : "+ Arrays.toString(inSrc));
+        System.out.println("Output Source : "+ Arrays.toString(outSrc));
+
+    }
+}
+
+// 결과
+Input Source : [0,1,2,3,4,5,6,7,8,9]
+Output Source : [0,1,2,3,4,5,6,7,8,9]
+```
+
+
+
+
+
+ByteArrayInputStream/ByteArrayOutputStream을 이용해서 바이트 배열 inSrc의 데이터를 outSrc로 복사하는 예제인데, read()와 write()를 사용하는 가장 기본적인 방법을 보여준다.
+
+
+
+while문의 조건식이 조금 복잡한데, 이 조건식은 아래와 같은 순서로 처리된다.
+
+```
+(data = input.read()) ! = -1
+
+1. data = input.read(); // read()를 호출한 반환값을 변수 data에 저장한다. (괄호먼저)
+2. data != -1 // data에 저장된 값이 -1인지 아닌지 비교한다.
+```
+
+
+
+바이트 배열은 사용하는 자원이 메모리 밖에 없으므로 가비지컬렉터에 의해 자동적으로 자원을 반환하므로 close()를 이용해서 스트림을 닫지 않아도 된다.
+
+
+
+
+
+
 
 
 
@@ -120,3 +359,7 @@ InputStream 클래스에는 바이트 기반 입력 스트림이 기본적으로
 JAVA의 정석
 
 출처: https://elena90.tistory.com/entry/Java-파일-입출력스트림InputStreamOutputStreamReaderWriter [오니님의짱꺤뽀]
+
+출처: https://dololak.tistory.com/84 [코끼리를 냉장고에 넣는 방법]
+
+출처: https://adrian0220.tistory.com/150
