--- a/13주차.md
+++ b/13주차.md
@@ -272,7 +272,7 @@ InputStream과 반대되는 개념으로 OutputStream 추상 클래스는 데이
 
 
 
-바이트기반 스트림에는 inputstream, outputstream과 더불어 ByteArrayInputStream, ByteArrayOutputStream, FileInputStream, FileOutputStream 이 있다.
+*바이트기반 스트림에는 inputstream, outputstream과 더불어 ByteArrayInputStream, ByteArrayOutputStream, FileInputStream, FileOutputStream 이 있다.*
 
 
 
@@ -342,7 +342,174 @@ while문의 조건식이 조금 복잡한데, 이 조건식은 아래와 같은 
 
 
 
+FileInputStream/FileOutputStream 은 파일에 입출력을 하기 위한 스트림이다.
 
+
+
+| 생성자                                        | 설명                                                         |
+| --------------------------------------------- | ------------------------------------------------------------ |
+| FileInputStream(String name)                  | 지정된 파일이름(name)을 가진 실제 파일과 연결된 FileInputStream을 생성한다. |
+| FileInputStream(File file)                    | 파일의 이름이 String이 아닌 File인스턴스로 지정해주어야 하는 점을 제외하고 FileInputStream(String name)와 같다. |
+| FileInputStream(FileDescriptor fdObj)         | 파일 디스크립터(fdObj)로 FileInputStream을 생성한다.         |
+| FileOutputStream(String name)                 | 지정된 파일이름(name)을 가진 실제 파일과의 연결된 FileOutputStream을 생성한다. |
+| FileOutputStream(String name, boolean append) | 지정된 파일이름(name)을 가진 실제 파일과 연결된 FileOutputStream을 생성한다. 두 번째 인자인 append를 true로 하면, 출력 시 기존의 파일내용의 마지막에 덧붙인다. false면, 기존의 파일내용을 덮어쓰게 된다. |
+| FileOutputStream(File file)                   | 파일의 이름을 String이 아닌 File인스턴스로 지정해주어야 하는 점을 제외하고 FileOutputStream(String name)과 같다. |
+| FileOutputStream(File file, boolean append)   | 파일의 이름을 String이 아닌 File인스턴스로 지정해주어야 하는 점을 제외하고 FileOutputStream(String name, boolean append)과 같다. |
+| FileOutputStream(FileDescriptor fdObj)        | 파일 디스크립터(fdObj)로 FileOutputStream을 생성한다.        |
+
+
+
+```
+import java.io.FileInputStream;
+import java.io.IOException;
+
+public class FileViewer {
+    public static void main(String[] args) throws IOException {
+
+        FileInputStream fis = new FileInputStream(args[0]);
+        int data = 0;
+
+        while((data=fis.read()) != -1){
+            char c = (char)data;
+            System.out.println(c);
+        }
+
+    }
+}
+
+//실행결과
+
+import java.io.FileInputStream;
+import java.io.IOException;
+
+public class FileViewer {
+    public static void main(String[] args) throws IOException {
+
+        FileInputStream fis = new FileInputStream(args[0]);
+        int data = 0;
+
+        while((data=fis.read()) != -1){
+            char c = (char)data;
+            System.out.println(c);
+        }
+
+    }
+}
+```
+
+
+
+커맨드라인으로부터 입력받은 파일의 내용을 읽어서 그대로 화면에 출력해주는 간단한 예제이다.
+
+read()의 반환값이 int형(4byte)이긴 하지만, 더 이상 입력값이 없음을 알리는 -1을 제외하고는 0~255(1 byte) 범위의 정수값이기 때문에, char형(2 byte)으로 변환한다 해도 손실되는 값은 없다.
+
+
+
+read()가 한번에 1 byte씩 파일로부터 데이터를 읽어 들이긴 하지만, 데이터의 범위가 십진수로 0~255(16진수로는 0x00~0xff) 범위의 정수값이고, 또 읽을 수 있는 입력값이 더 이상 없음을 알릴 수 있는 값(-1)도 필요하다. 그래서 다소 크긴 하지만 정수형 중에서는 연산이 가장 효율적이고 빠른 int 형 값을 반환하도록 한 것이다.
+
+
+
+
+
+```
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+
+public class FileCopy {
+    public static void main(String[] args) {
+
+        try(FileInputStream fis = new FileInputStream(args[0]);
+            FileOutputStream fos = new FileOutputStream(args[0]))
+        {
+            int data = 0;
+            while((data=fis.read()) != -1){
+                fos.write(data);
+            }
+        }catch (IOException e){
+            e.printStackTrace();
+        }
+    }
+}
+
+//실행결과
+import java.io.FileInputStream;
+import java.io.FileOutputStream;
+import java.io.IOException;
+
+public class FileCopy {
+    public static void main(String[] args) {
+
+        try(FileInputStream fis = new FileInputStream(args[0]);
+            FileOutputStream fos = new FileOutputStream(args[0]))
+        {
+            int data = 0;
+            while((data=fis.read()) != -1){
+                fos.write(data);
+            }
+        }catch (IOException e){
+            e.printStackTrace();
+        }
+    }
+}
+
+```
+
+
+
+FileInputStream과 FileOutputStream을 사용해서 FileCopy.java파일의 내용을 그대로 FileCopy.bak로 복사하는 일을 한다.
+
+단순히 FileCopy.java의 내용을 read()로 읽어서 , write(int b) 로 FileCopy.bak에 출력한다.
+
+이처럼 텍스트파일을 다루는 경우에는 FileInputStream/FileOutputStream보다 문자 기반의 스트림인 FileReader/FileWriter를 사용하는 것이 더 좋다.
+
+
+
+
+
+#### Character 스트림
+
+문자 데이터를 다루는데 사용된 다는 것을 제외하고는 바이트기반 스트림과 문자기반 스트림의 사용방법은 거의 같기 때문에 앞서 설명한 바이트기반 스트림에 대한 내용만으로도 별도의 설명은 필요없을 것이라 생각한다.
+
+
+
+바이기반 스트림의 조상이 InputStream/OutputStream 인 것과 같이 문자 기반의 스트림에서는 Reader/Writer가 그와 같은 역할을 한다.
+
+
+
+Reader의 메서드
+
+| 메서드                                        | 설명                                                         |
+| --------------------------------------------- | ------------------------------------------------------------ |
+| abstract void close()                         | 입력스트림을 닫음으로써 사용하고 있던 자원을 반환한다.       |
+| void mark(int readlimit)                      | 현재위치를 표시해놓는다. 후에 reset()에 의해서 표시해 놓은 위치로 다시 돌아갈 수 있다. |
+| boolean markSupported()                       | mark()와 reset()을 지원하는지를 알려준다.                    |
+| int read()                                    | 입력소스로부터 하나의 문자를 읽어온다. char의 범위인 0~65535범위의 정수를 반환하며, 입력스트림의 마지막 데이터에 도달하면, -1을 반환한다. |
+| int read(char[] c)                            | 입력소스로부터 매개변수로 주어진 배열 c의 크기만큼 읽어서 배열 c에 저장한다. 읽어 온 데이터의 개수 또는 -1을 반환한다. |
+| abstract int read(char[] c, int off, int len) | 입력소스로부터 최대 len개의 문자를 읽어서, 배열 c의 지정된 위치(off)부터 읽은 만큼 저장한다. 읽어 온 데이터의 개수 또는 -1을 반환한다. |
+| int read(CharBuffer target)                   | 입력소스로부터 읽어서 문자버퍼(target)에 저장한다.           |
+| boolean ready()                               | 입력소스로부터 데이터를 읽을 준비가 되어있는지 알려준다.     |
+| void reset()                                  | 입력소스에서의 위치를 마지막으로 mark()가 호출되었던 위치로 되돌린다. |
+| long skip(long n)                             | 현재 위치에서 주어진 문자 수 (n) 만큼을 건너뛴다.            |
+
+
+
+
+
+Writer의 메서드
+
+| 메서드                                            | 설명                                                         |
+| ------------------------------------------------- | ------------------------------------------------------------ |
+| Writer append(char c)                             | 지정된 문자를 출력소스에 출력한다.                           |
+| Writer append(CharSequence c)                     | 지정된 문자열(CharSequence)을 출력소스에 출력한다.           |
+| Writer append(CharSequence c, int start, int end) | 지정된 문자열(CharSequence)의 일부를 출력소스에 출력(CharBuffer, String, StringBuffer 가 CharSequence를 구현) |
+| abstract void close()                             | 출력스트림을 닫음으로써 사용하고 있던 자원을 반환한다.       |
+| abstract void flush()                             | 스트림의 버퍼에 있는 모든 내용을 출력소스에 쓴다.(버퍼가 있는 스트림에만 해당됨) |
+| void write(int b)                                 | 주어진 값을 출력소스에 쓴다.                                 |
+| void write(char[] c)                              | 주어진 배열 c에 저장된 모든 내용을 출력소스에 쓴다.          |
+| abstract void write(char[] c, int off, int len)   | 주어진 배열c에 저장된 내용 중에서 off번째부터 len길이만큼만 출력소스에 쓴다. |
+| void write(String str)                            | 주어진 문자열(str)을 출력소스에 쓴다.                        |
+| void write(String str, int off, int len)          | 주어진 문자열(str)의 일부를 출력소스에 쓴다.(off번째 문자부터 len개 만큼의 문자열) |
 
 
 
