--- a/13주차.md
+++ b/13주차.md
@@ -515,6 +515,181 @@ Writer의 메서드
 
 
 
+#### FileReader와 FileWriter
+
+
+
+FileReader/FileWriter는 파일로부터 텍스트파일을 읽고, 파일에 쓰는데 사용된다.
+
+사용방법은 FileInputStream/FileOutputStream과 다르지 않다.
+
+
+
+
+
+#### PipedReader와 PipedWriter
+
+
+
+PipedReader/PipedWriter는 쓰레드 간에 데이터를 주고받을때 사용된다. 다른 스트림과는 달리 입력과 출력스트림을 하나의 스트림으로 연결(connect)해서 데이터를 주고받는다는 특징이 있다.
+
+스트림을 생성한 다음에 어느 한쪽 쓰레드에서 coonect()를 호출해서 입력스트림과 출력스트림을 연결한다. 입출력을 마친 후에는 어느 한쪽 스트림만 닫아도 나머지 스트림은 자동으로 닫힌다.
+
+
+
+#### StringReader와 StringWriter
+
+
+
+StringReader/StringWriter는 CharArrayReader/CharArrayWriter와 같이 입출력대상이 메모리인 스트림이다. StringWriter에 출력되는 데이터는 내부의 StringBuffer에 저장되며 StringWriter의 다음과 같은 메서드를 이용해서 저장된 데이터를 얻을 수 있다.
+
+
+
+```
+StringBuffer getBuffer() //StringWriter에 출력한 데이터가 저장된 StringBuffer를 반환한다.
+String toString() //StringWriter에 출력된 (StringBuffer에 저장된) 문자열을 반환한다.
+```
+
+
+
+
+
+
+
+### 4. 표준 스트림 (System.in, System.out, System.err)
+
+
+
+표준입출력은 콘솔(console, 도스창)을 통한 데이터 입력과 콘솔로의 데이터 출력을 의미한다. 자바에서는 표준 입출력(standard I/O)을 위해 3가지 입출력 스트림, System.in, System.out, System.err을 제공하는데, 이 들은 자바 어플리케이션의 실행과 동시에 사용할 수 있게 자동적으로 생성되기 때문에 개발자가 별도로 스트림을 생성하는 코드를 작성하지 않고도 사용이 가능하다.
+
+지금까지 줄 곧 사용해온 System.out을 스트림의 생성없이 사용할 수 있었던 것이 바로 이러한 이유 때문이다.
+
+
+
+```
+System.in //콘솔로부터 데이터를 입력받는데 사용
+System.out //콘솔로 데이터를 출력하는데 사용
+System.err //콘솔로 데이터를 출력하는데 사용
+```
+
+
+
+System클래스의 소스에서 알 수 있듯이 in , out , err 은 System클래스에 선언된 클래스변수(static변수) 이다. 선언부분만 봐서는 out, err, in 의 타입은 InputStream과 PrintStream 이지만 실제로는 버퍼를 이용하는 BufferdInputStream과 BufferdOutputStream의 인스턴스를 사용한다.
+
+
+
+```
+public final class System{
+	public final static InputStream in = nullInputStream();
+	public final static PrintStream out = nullPrintStream();
+	public final static PrintStream err = nullPrintStream();
+	...
+}
+```
+
+
+
+```
+import java.io.*;
+
+class StandardIOEx1 {
+	public static void main(String[] args){
+		try{
+			int input = 0;
+			
+			while((input = System.in.read()) != -1){
+				System.out.println("input : " + input + ", (char)input :" + (char)input);
+			}
+		}catch(IOException e){
+			e.printStackTrace();
+		}
+	} // main
+}
+
+//결과
+C:\jdk1.8\work\ch15>java StandardIOEx1
+hello
+input : 104, (char)input :h
+input : 101, (char)input :e
+input : 108, (char)input :l
+input : 108, (char)input :l
+input : 111, (char)input :o
+input : 13, (char)input :		//특수문자라서 화면에 보이지 않는다.
+input : 10, (char)input :	
+								// 개행문자가 출력되어 줄바꿈 되었다.
+^Z 								// Ctrl + Z를 눌러서 입력의 끝(EOF)를 알린다.
+
+C:\jdk1.8\work\ch15>
+```
+
+
+
+화면에 커서가 입력을 기다리고 있을 것이다. hello라고 입력하고 '^Z'를 누르거나 Enter를 누르면, 입력한 문자들이 출력되고 프로그램이 종료된다.
+
+예제를 실행하여 System.in.read()가 호출되면, 코드의 진행을 멈추고 콘솔에 커서가 깜빡이며 사용자의 입력을 기다린다.
+
+
+
+```
+while((input = System.in.read()) != -1) { }
+```
+
+
+
+콘솔입력을 버퍼를 가지고 있기 때문에 Backspace키를 이용해서 편집이 가능하며 한 번에 버퍼의 크기만큼 입력이 가능하다. 그래서 Enter키나 입력의 끝을 알리는 '^z' 를 누르기 전까지는 아직 데이터가 입력 중인 것으로 간주되어 커서가 입력을 계속 기다리는 상태(블락킹 상태)에 머무르게 된다.
+
+콘솔에 데이터를 입력하고 Enter키를 누르면 입력대기상태에서 벗어나 입력된 데이터를 읽기 시작하고 입력된 데이터를 모두 읽으면 다시 입력대기 상태가 된다.
+
+이러한 과정이 반복되다가 사용자가 '^z'를 입력하면 , read()는 입력이 종료되었음을 인식하고 -1을 반환하여 while문을 벗어나 프로그램이 종료된다.
+
+
+
+
+
+
+
+#### setOut(), setErr(), setIn()
+
+
+
+초기에는 System.in, System.out, System.err의 입출력대상이 콘솔화면이지만, setIn(), setOut(), setErr()를 사용하면 입출력을 콘솔 이외에 다른 입출력 대상으로 변경하는 것이 가능하다.
+
+
+
+| 메서드                              | 설명                                            |
+| ----------------------------------- | ----------------------------------------------- |
+| static void setOut(PrintStream out) | System.out의 출력을 지정된 PrintStream으로 변경 |
+| static void setErr(PrintStream err) | System.err의 출력을 지정한 PrintStream으로 변경 |
+| static void setIn(InputStream in)   | System.in의 입력을 지정한 InputStream으로 변경  |
+
+
+
+그러나 JDK1.5 부터 Scanner 클래스가 제공되면서 System.in으로부터 데이터를 입력받아 작업하는 것이 편리해졌다.
+
+
+
+
+
+### 5. 파일 읽고 쓰기
+
+
+
+자바 내장 클래스인 FileWriter, BufferedWriter(파일읽기) , FileReader,BufferedReader(파일쓰기)를 사용하도록 하겠습니다.
+
+
+
+#### FileWriter
+
+FileWriter 객체와 BufferedWrite 객체를 생성해줍니다. 
+
+여기서 FileWriter객체를 생성할때 생정자에 true를 주면 파일 이어서 쓰기가 가능합니다.
+
+default는 false입니다. (false로 하면 파일을 새로 쓰게 됩니다.)
+
+
+
+
+
 
 
 
@@ -530,3 +705,5 @@ JAVA의 정석
 출처: https://dololak.tistory.com/84 [코끼리를 냉장고에 넣는 방법]
 
 출처: https://adrian0220.tistory.com/150
+
+출처: https://vmpo.tistory.com/63
