--- a/13주차.md
+++ b/13주차.md
@@ -688,6 +688,93 @@ default는 false입니다. (false로 하면 파일을 새로 쓰게 됩니다.)
 
 
 
+```
+public class FileMake {
+
+    public static void main(String[] args) {
+        try(
+                FileWriter fw = new FileWriter( "soccer.txt" ,true);
+                BufferedWriter bw = new BufferedWriter( fw );
+            )
+        {
+            bw.write("손흥민"); //버퍼에 데이터 입력
+            bw.newLine(); //버퍼에 개행 삽입
+            bw.write("이강인");
+            bw.newLine();
+            bw.flush(); //버퍼의 내용을 파일에 쓰기
+        }catch (IOException e ) {
+            System.out.println(e);
+        }
+
+        File f = new File("soccer.txt");
+        // 파일 존재 여부 판단
+        if (f.isFile()) {
+            System.out.println("soccer.txt 파일이 있습니다.");
+        }
+    }
+
+}
+```
+
+
+
+
+
+실행을 하면 다음과 같이 실행이 되는 것을 확인할 수 있다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/스트림8.PNG"> </img>
+
+
+
+
+
+
+
+#### File Read
+
+
+
+파일을 읽을때는 아래 객체를 사용한다.
+
+FileReader, BufferedReader
+
+
+
+FileReader의 생성자에는 파일경로를 작성한다. 지금은 자바프로젝트 경로에 있으므로 파일명만 작성해도 읽어낼 수 있으나, 다른 경로에 있을 경우 상대경로 또는 절대경로를 입력하면 된다.
+
+
+
+```
+        //위에 코드와 밑의 코드를 합쳐보자
+        
+        try(
+                FileReader rw = new FileReader("soccer.txt");
+                BufferedReader br = new BufferedReader( rw );
+        ){
+
+            //읽을 라인이 없을 경우 br은 null을 리턴한다.
+            String readLine = null ;
+            while( ( readLine =  br.readLine()) != null ){
+                System.out.println(readLine);
+            }
+        }catch ( IOException e ) {
+            System.out.println(e);
+        }
+
+```
+
+
+
+
+
+코드를 붙인 후 코드를 실행하게 되면 아래와 같이 출력이 나오게 됩니다.
+
+
+
+<img src="https://github.com/sungpillhong/whiteshipstudy/blob/master/screenshot/스트림9.PNG"> </img>
+
 
 
 
