--- a/15주차.md
+++ b/15주차.md
@@ -544,6 +544,10 @@ Supplier<Integer> incrementer() {
 
 
 
+#### 메소드 레퍼런스
+
+
+
 람다식을 충분히 간결하게 표현했다고 생각했는데 더 간결하게 표현할 수 있는 방법이 있다.
 
 항상 그런 것은 아니고, 람다식이 하나의 메서드만 호출하는 경우에는 '메서드 참조(method reference)' 라는 방법으로 람다식을 간략히 할 수 있다.
@@ -612,9 +616,47 @@ Function<String, Boolean> f2 = obj::equals //메서드 참조
 
 
 
+#### 생성자 레퍼런스
 
 
 
+생성자를 호출하는 람다식도 메서드 참조로 변환할 수 있다.
+
+
+
+```
+supplier<MyClass> s = () -> new MyClass(); //람다식
+supplier<MyClass> s = MyClass::new; //메서드참조
+```
+
+
+
+매개변수가 있는 생성자라면, 매개변수의 개수에 따라 알맞은 함수형 인터페이스를 사용하면 된다. 필요하다면 함수형 인터페이스를 새로 정의해야 한다.
+
+
+
+```
+Function<Integer, MyClass> f = (i) -> new MyClass(i); //람다식
+Function<Integer, MyClass> f2 = MyClass::new;    //메서드 참조
+
+BiFunction<Intege, String, MyClass> bf = (i,s) -> new MyClass(i,s); //람다식
+BiFunction<Intege, String, MyClass> bf = MyClass::new; //메서드 참조
+```
+
+
+
+그리고 배열을 생성할 때는 아래와 같이 하면 된다.
+
+
+
+```
+Function<Integer, int[]> f = x -> new int[x]; //람다식
+Function<Integer, int[]> f2 = int[]::new;
+```
+
+
+
+메서드 참조는 람다식을 마치 static변수처럼 다룰 수 있게 해준다. 메서드 참조는 코드를 간략히하는데 유용해서 많이사용된다.
 
 
 
